--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "bcryptjs-then": "^1.0.1",
     "bluebird": "^3.4.7",
     "body-parser": "^1.17.1",
-    "bunyan": "^1.8.8",
+    "bunyan": "^1.8.9",
     "cheerio": "^0.22.0",
     "child-process-promise": "^2.2.0",
     "chokidar": "^1.6.0",
@@ -51,21 +51,22 @@
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "cron": "^1.2.1",
+    "execa": "^0.6.3",
     "express": "^4.15.2",
     "express-brute": "^1.0.0",
     "express-brute-mongoose": "0.0.7",
     "express-session": "^1.15.1",
     "file-type": "^4.0.0",
     "filesize.js": "^1.0.2",
-    "follow-redirects": "^1.2.1",
-    "fs-extra": "^2.0.0",
+    "follow-redirects": "^1.2.3",
+    "fs-extra": "^2.1.2",
     "git-wrapper2-promise": "^0.2.9",
     "highlight.js": "^9.9.0",
-    "i18next": "^7.1.1",
-    "i18next-express-middleware": "^1.0.2",
+    "i18next": "^7.1.3",
+    "i18next-express-middleware": "^1.0.3",
     "i18next-node-fs-backend": "^0.1.3",
     "image-size": "^0.5.1",
-    "jimp": "github:NGPixel/jimp",
+    "jimp": "github:ngpixel/jimp",
     "js-yaml": "^3.8.1",
     "klaw": "^1.3.1",
     "levelup": "^1.3.5",
@@ -80,12 +81,13 @@
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-task-lists": "^1.4.1",
     "memdown": "^1.2.4",
-    "mime-types": "^2.1.13",
-    "moment": "^2.17.1",
+    "mime-types": "^2.1.15",
+    "moment": "^2.18.1",
     "moment-timezone": "^0.5.11",
-    "mongoose": "^4.8.5",
+    "mongodb": "^2.2.25",
+    "mongoose": "^4.9.1",
     "multer": "^1.2.1",
-    "ora": "^1.1.0",
+    "ora": "^1.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
@@ -94,11 +96,11 @@
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
     "requarks-core": "^0.2.2",
-    "request": "^2.80.0",
-    "search-index-adder": "github:NGPixel/search-index-adder",
-    "search-index-searcher": "github:NGPixel/search-index-searcher",
+    "request": "^2.81.0",
+    "search-index-adder": "github:ngpixel/search-index-adder",
+    "search-index-searcher": "github:ngpixel/search-index-searcher",
     "semver": "^5.3.0",
-    "serve-favicon": "^2.4.1",
+    "serve-favicon": "^2.4.2",
     "simplemde": "^1.11.2",
     "socket.io": "^1.7.3",
     "sticky-js": "^1.0.7",
@@ -112,16 +114,16 @@
   },
   "devDependencies": {
     "ace-builds": "^1.2.6",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2015": "^6.24.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "codacy-coverage": "^2.0.0",
-    "eslint": "^3.16.1",
+    "eslint": "^3.18.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-clean-css": "^3.0.3",
+    "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.1",
     "gulp-gzip": "^1.4.0",
     "gulp-include": "^2.3.1",
@@ -129,12 +131,12 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.0.0",
     "gulp-tar": "^1.9.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^2.1.2",
     "gulp-watch": "^4.3.11",
     "gulp-zip": "^4.0.0",
     "istanbul": "^0.4.5",
-    "jquery": "^3.1.1",
-    "jquery-contextmenu": "^2.4.3",
+    "jquery": "^3.2.1",
+    "jquery-contextmenu": "^2.4.4",
     "jquery-simple-upload": "^1.0.0",
     "jquery-smooth-scroll": "^2.0.0",
     "merge-stream": "^1.0.1",
@@ -144,10 +146,11 @@
     "pug-lint": "^2.4.0",
     "run-sequence": "^1.2.2",
     "snyk": "^1.25.1",
-    "standard": "^9.0.0",
+    "standard": "^9.0.2",
     "sticky-js": "^1.1.9",
     "twemoji-awesome": "^1.0.4",
-    "vue": "^2.2.1"
+    "vee-validate": "^2.0.0-beta.25",
+    "vue": "^2.2.5"
   },
   "standard": {
     "globals": [
