--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,8 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-# SublimeText Files
-*.sublime-workspace
+# Fusebox
+.fusebox
 
 # Config Files
 config.yml
