Fuse-box client scripts integration + deps update

--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
   },
   "dependencies": {
     "auto-load": "^2.1.0",
-    "axios": "^0.15.3",
+    "axios": "^0.16.0",
     "bcryptjs-then": "^1.0.1",
     "bluebird": "^3.4.7",
     "body-parser": "^1.17.1",
     "bunyan": "^1.8.9",
     "cheerio": "^0.22.0",
-    "child-process-promise": "^2.2.0",
+    "child-process-promise": "^2.2.1",
     "chokidar": "^1.6.0",
     "commander": "^2.9.0",
     "compression": "^1.6.2",
@@ -61,7 +61,7 @@
     "express": "^4.15.2",
     "express-brute": "^1.0.0",
     "express-brute-mongoose": "0.0.7",
-    "express-session": "^1.15.1",
+    "express-session": "^1.15.2",
     "file-type": "^4.0.0",
     "filesize.js": "^1.0.2",
     "follow-redirects": "^1.2.3",
@@ -85,19 +85,19 @@
     "markdown-it-expand-tabs": "^1.0.11",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "^3.0.1",
-    "markdown-it-task-lists": "^1.4.1",
+    "markdown-it-task-lists": "^2.0.0",
     "memdown": "^1.2.4",
     "mime-types": "^2.1.15",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.11",
     "mongodb": "^2.2.25",
-    "mongoose": "^4.9.1",
+    "mongoose": "^4.9.2",
     "multer": "^1.2.1",
     "ora": "^1.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
-    "pm2": "^2.4.2",
+    "pm2": "^2.4.3",
     "pug": "^2.0.0-beta11",
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
@@ -119,33 +119,33 @@
     "winston": "^2.3.0"
   },
   "devDependencies": {
-    "ace-builds": "^1.2.6",
     "babel-cli": "^6.24.0",
     "babel-jest": "^19.0.0",
     "babel-preset-es2015": "^6.24.0",
+    "brace": "^0.10.0",
     "colors": "^1.1.2",
-    "eslint": "^3.18.0",
+    "eslint": "^3.19.0",
     "eslint-config-standard": "^7.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^4.2.1",
+    "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
-    "fuse-box": "^1.3.128",
+    "fuse-box": "^1.3.129",
     "jest": "^19.0.2",
     "jquery": "^3.2.1",
     "jquery-contextmenu": "^2.4.4",
     "jquery-simple-upload": "^1.0.0",
     "jquery-smooth-scroll": "^2.0.0",
-    "node-sass": "^4.5.1",
+    "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "pug-lint": "^2.4.0",
-    "snyk": "^1.25.1",
+    "snyk": "^1.26.1",
     "standard": "^9.0.2",
     "sticky-js": "^1.1.9",
     "twemoji-awesome": "^1.0.4",
     "vee-validate": "^2.0.0-beta.25",
-    "vue": "^2.2.5"
+    "vue": "^2.2.6"
   },
   "standard": {
     "globals": [
