--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wiki",
-  "version": "1.0.0-beta.9",
+  "version": "1.0.0-beta.10",
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "server.js",
   "scripts": {
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "auto-load": "^2.1.0",
-    "axios": "^0.16.0",
+    "axios": "^0.16.1",
     "bcryptjs-then": "^1.0.1",
     "bluebird": "^3.4.7",
     "body-parser": "^1.17.1",
@@ -56,7 +56,7 @@
     "execa": "^0.6.3",
     "express": "^4.15.2",
     "express-brute": "^1.0.0",
-    "express-brute-mongoose": "0.0.7",
+    "express-brute-mongoose": "0.0.8",
     "express-session": "^1.15.2",
     "file-type": "^4.0.0",
     "filesize.js": "^1.0.2",
@@ -69,7 +69,7 @@
     "i18next-node-fs-backend": "^0.1.3",
     "image-size": "^0.5.1",
     "jimp": "github:ngpixel/jimp",
-    "js-yaml": "^3.8.2",
+    "js-yaml": "^3.8.3",
     "klaw": "^1.3.1",
     "levelup": "^1.3.5",
     "lodash": "^4.17.3",
@@ -85,7 +85,7 @@
     "memdown": "^1.2.4",
     "mime-types": "^2.1.15",
     "moment": "^2.18.1",
-    "moment-timezone": "^0.5.11",
+    "moment-timezone": "^0.5.13",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.2",
     "multer": "^1.2.1",
@@ -99,7 +99,7 @@
     "passport-slack": "0.0.7",
     "passport-windowslive": "^1.0.2",
     "passport.socketio": "^3.7.0",
-    "pm2": "^2.4.3",
+    "pm2": "^2.4.4",
     "pug": "^2.0.0-beta11",
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
@@ -120,18 +120,18 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "babel-cli": "latest",
+    "babel-cli": "^6.24.1",
     "babel-jest": "latest",
-    "babel-preset-es2015": "latest",
+    "babel-preset-es2015": "^6.24.1",
     "brace": "^0.10.0",
     "colors": "^1.1.2",
     "eslint": "latest",
-    "eslint-config-standard": "latest",
+    "eslint-config-standard": "^10.2.0",
     "eslint-plugin-import": "latest",
     "eslint-plugin-node": "latest",
     "eslint-plugin-promise": "latest",
-    "eslint-plugin-standard": "latest",
-    "fuse-box": "^1.3.129",
+    "eslint-plugin-standard": "^3.0.1",
+    "fuse-box": "^1.3.131",
     "jest": "latest",
     "jquery": "^3.2.1",
     "jquery-contextmenu": "^2.4.4",
@@ -140,8 +140,8 @@
     "node-sass": "latest",
     "nodemon": "latest",
     "pug-lint": "latest",
-    "snyk": "latest",
-    "standard": "latest",
+    "snyk": "^1.27.1",
+    "standard": "^10.0.1",
     "sticky-js": "^1.1.9",
     "twemoji-awesome": "^1.0.4",
     "uglify-js": "latest",
