--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "image-size": "^0.5.1",
     "jimp": "github:ngpixel/jimp",
     "js-yaml": "^3.8.3",
+    "jsonwebtoken": "^7.3.0",
     "klaw": "^1.3.1",
     "levelup": "^1.3.5",
     "lodash": "^4.17.3",
@@ -91,6 +92,7 @@
     "multer": "^1.2.1",
     "ora": "^1.2.0",
     "passport": "^0.3.2",
+    "passport-azure-ad-oauth2": "0.0.4",
     "passport-facebook": "^2.1.1",
     "passport-github2": "^0.1.10",
     "passport-google-oauth20": "^1.0.0",
