--- a/config.sample.yml
+++ b/config.sample.yml
@@ -132,6 +132,14 @@ git:
     email: marty@example.com
 
 # ---------------------------------------------------------------------
+# Features
+# ---------------------------------------------------------------------
+# You can enable / disable specific features below
+
+features:
+  mathjax: true
+
+# ---------------------------------------------------------------------
 # External Logging
 # ---------------------------------------------------------------------
 
