--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "markdown-it-expand-tabs": "^1.0.11",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "^3.0.1",
+    "markdown-it-mathjax": "^2.0.0",
     "markdown-it-task-lists": "^2.0.0",
     "memdown": "^1.2.4",
     "mime-types": "^2.1.15",
@@ -139,6 +140,7 @@
     "jquery-contextmenu": "^2.4.4",
     "jquery-simple-upload": "^1.0.0",
     "jquery-smooth-scroll": "^2.0.0",
+    "mathjax": "^2.7.0",
     "node-sass": "latest",
     "nodemon": "latest",
     "pug-lint": "latest",
