--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "cheerio": "^0.22.0",
     "child-process-promise": "^2.2.1",
     "chokidar": "^1.6.1",
-    "commander": "^2.9.0",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
@@ -120,7 +119,8 @@
     "through2": "^2.0.3",
     "validator": "^7.0.0",
     "validator-as-promised": "^1.0.2",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "yargs": "^7.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
