--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "i18next-express-middleware": "^1.0.4",
     "i18next-node-fs-backend": "^0.1.3",
     "image-size": "^0.5.1",
-    "jimp": "ngpixel/jimp",
+    "jimp": "https://github.com/ngpixel/jimp.git",
     "js-yaml": "^3.8.3",
     "jsonwebtoken": "^7.3.0",
     "klaw": "^1.3.1",
@@ -106,8 +106,8 @@
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
     "request": "^2.81.0",
-    "search-index-adder": "ngpixel/search-index-adder",
-    "search-index-searcher": "ngpixel/search-index-searcher",
+    "search-index-adder": "https://github.com/ngpixel/search-index-adder.git",
+    "search-index-searcher": "https://github.com/ngpixel/search-index-searcher.git",
     "semver": "^5.3.0",
     "serve-favicon": "^2.4.2",
     "simplemde": "^1.11.2",
