--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
     "express-brute": "^1.0.1",
     "express-brute-mongoose": "0.0.8",
     "express-session": "^1.15.2",
-    "file-type": "^4.1.0",
+    "file-type": "^4.2.0",
     "filesize.js": "^1.0.2",
     "follow-redirects": "^1.2.3",
     "fs-extra": "^2.1.2",
     "git-wrapper2-promise": "^0.2.9",
-    "highlight.js": "^9.10.0",
-    "i18next": "^7.2.3",
+    "highlight.js": "^9.11.0",
+    "i18next": "^8.0.0",
     "i18next-express-middleware": "^1.0.4",
     "i18next-node-fs-backend": "^0.1.3",
     "image-size": "^0.5.1",
@@ -87,8 +87,8 @@
     "mime-types": "^2.1.15",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
-    "mongodb": "^2.2.25",
-    "mongoose": "^4.9.4",
+    "mongodb": "^2.2.26",
+    "mongoose": "^4.9.5",
     "multer": "^1.3.0",
     "ora": "^1.2.0",
     "passport": "^0.3.2",
@@ -101,7 +101,7 @@
     "passport-slack": "0.0.7",
     "passport-windowslive": "^1.0.2",
     "passport.socketio": "^3.7.0",
-    "pm2": "^2.4.4",
+    "pm2": "^2.4.5",
     "pug": "^2.0.0-beta11",
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
@@ -123,17 +123,17 @@
     "yargs": "^7.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "latest",
     "babel-jest": "latest",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015": "latest",
     "brace": "^0.10.0",
     "colors": "^1.1.2",
     "eslint": "latest",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard": "latest",
     "eslint-plugin-import": "latest",
     "eslint-plugin-node": "latest",
     "eslint-plugin-promise": "latest",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-standard": "latest",
     "fuse-box": "^1.3.131",
     "jest": "latest",
     "jquery": "^3.2.1",
@@ -144,9 +144,9 @@
     "node-sass": "latest",
     "nodemon": "latest",
     "pug-lint": "latest",
-    "snyk": "^1.28.1",
+    "snyk": "latest",
     "standard": "^10.0.2",
-    "sticky-js": "^1.1.9",
+    "sticky-js": "^1.2.0",
     "twemoji-awesome": "^1.0.6",
     "uglify-js": "latest",
     "vee-validate": "^2.0.0-beta.25",
