--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "file-type": "^4.2.0",
     "filesize.js": "^1.0.2",
     "follow-redirects": "^1.2.3",
-    "fs-extra": "^2.1.2",
+    "fs-extra": "^3.0.0",
     "git-wrapper2-promise": "^0.2.9",
     "highlight.js": "^9.11.0",
     "i18next": "^8.0.0",
@@ -145,7 +145,7 @@
     "nodemon": "latest",
     "pug-lint": "latest",
     "snyk": "latest",
-    "standard": "^10.0.2",
+    "standard": "latest",
     "sticky-js": "^1.2.0",
     "twemoji-awesome": "^1.0.6",
     "uglify-js": "latest",
