--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     "ws": true,
     "Mongoose": true,
     "ROOTPATH": true,
+    "SERVERPATH": true,
     "IS_DEBUG": true,
     "PROCNAME": true
   }
