--- a/config.sample.yml
+++ b/config.sample.yml
@@ -89,8 +89,8 @@ auth:
   azure:
     enabled: false
     clientID: APP_ID
-    clientSecret: APP_SECRET_KEY,
-    resource: '00000002-0000-0000-c000-000000000000',
+    clientSecret: APP_SECRET_KEY
+    resource: '00000002-0000-0000-c000-000000000000'
     tenant: 'YOUR_TENANT.onmicrosoft.com'
 
 # ---------------------------------------------------------------------
