fix: Page contents block doesn't stick until end of page

--- a/package.json
+++ b/package.json
@@ -139,13 +139,13 @@
     "jquery-contextmenu": "^2.4.4",
     "jquery-simple-upload": "^1.0.0",
     "jquery-smooth-scroll": "^2.1.2",
+    "jquery-sticky": "^1.0.4",
     "mathjax": "^2.7.1",
     "node-sass": "latest",
     "nodemon": "latest",
     "pug-lint": "latest",
     "snyk": "latest",
     "standard": "latest",
-    "sticky-js": "^1.2.0",
     "twemoji-awesome": "^1.0.6",
     "uglify-js": "latest",
     "vee-validate": "^2.0.0-beta.25",
