--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "eslint-plugin-node": "latest",
     "eslint-plugin-promise": "latest",
     "eslint-plugin-standard": "latest",
-    "fuse-box": "^1.3.131",
+    "fuse-box": "^2.0.0-beta.13",
     "jest": "latest",
     "jquery": "^3.2.1",
     "jquery-contextmenu": "^2.4.4",
@@ -148,9 +148,11 @@
     "snyk": "latest",
     "standard": "latest",
     "twemoji-awesome": "^1.0.6",
+    "typescript": "^2.3.2",
     "uglify-js": "latest",
     "vee-validate": "^2.0.0-rc.2",
-    "vue": "^2.3.0"
+    "vue": "^2.3.2",
+    "vue-template-compiler": "^2.3.2"
   },
   "standard": {
     "globals": [
