fix: Updated dependencies

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "bunyan": "^1.8.10",
     "cheerio": "^0.22.0",
     "child-process-promise": "^2.2.1",
-    "chokidar": "^1.6.1",
+    "chokidar": "^1.7.0",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
@@ -58,18 +58,18 @@
     "express-brute": "^1.0.1",
     "express-brute-mongoose": "0.0.8",
     "express-session": "^1.15.2",
-    "file-type": "^4.2.0",
+    "file-type": "^4.3.0",
     "filesize.js": "^1.0.2",
     "follow-redirects": "^1.2.3",
-    "fs-extra": "^3.0.0",
+    "fs-extra": "^3.0.1",
     "git-wrapper2-promise": "^0.2.9",
     "highlight.js": "^9.11.0",
-    "i18next": "^8.1.0",
+    "i18next": "^8.2.0",
     "i18next-express-middleware": "^1.0.5",
     "i18next-node-fs-backend": "^1.0.0",
-    "image-size": "^0.5.1",
+    "image-size": "^0.5.2",
     "jimp": "https://github.com/ngpixel/jimp.git",
-    "js-yaml": "^3.8.3",
+    "js-yaml": "^3.8.4",
     "jsonwebtoken": "^7.4.0",
     "klaw": "^1.3.1",
     "levelup": "^1.3.5",
@@ -79,17 +79,17 @@
     "markdown-it-anchor": "^4.0.0",
     "markdown-it-attrs": "^0.8.0",
     "markdown-it-emoji": "^1.3.0",
-    "markdown-it-expand-tabs": "^1.0.11",
+    "markdown-it-expand-tabs": "^1.0.12",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-mathjax": "^2.0.0",
-    "markdown-it-task-lists": "^2.0.0",
+    "markdown-it-task-lists": "^2.0.1",
     "memdown": "^1.2.4",
     "mime-types": "^2.1.15",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
     "mongodb": "^2.2.26",
-    "mongoose": "^4.9.7",
+    "mongoose": "^4.9.8",
     "multer": "^1.3.0",
     "ora": "^1.2.0",
     "passport": "^0.3.2",
@@ -112,7 +112,7 @@
     "semver": "^5.3.0",
     "serve-favicon": "^2.4.2",
     "simplemde": "^1.11.2",
-    "socket.io": "^1.7.3",
+    "socket.io": "^2.0.1",
     "stopword": "^0.1.1",
     "stream-to-promise": "^2.2.0",
     "tar": "^2.2.1",
@@ -120,7 +120,7 @@
     "validator": "^7.0.0",
     "validator-as-promised": "^1.0.2",
     "winston": "^2.3.1",
-    "yargs": "^7.1.0"
+    "yargs": "^8.0.1"
   },
   "devDependencies": {
     "babel-cli": "latest",
@@ -134,12 +134,12 @@
     "eslint-plugin-node": "latest",
     "eslint-plugin-promise": "latest",
     "eslint-plugin-standard": "latest",
-    "fuse-box": "^2.0.0-beta.13",
+    "fuse-box": "beta",
     "jest": "latest",
     "jquery": "^3.2.1",
-    "jquery-contextmenu": "^2.4.4",
+    "jquery-contextmenu": "^2.4.5",
     "jquery-simple-upload": "^1.0.0",
-    "jquery-smooth-scroll": "^2.1.2",
+    "jquery-smooth-scroll": "^2.2.0",
     "jquery-sticky": "^1.0.4",
     "mathjax": "^2.7.1",
     "node-sass": "latest",
@@ -150,9 +150,9 @@
     "twemoji-awesome": "^1.0.6",
     "typescript": "^2.3.2",
     "uglify-js": "latest",
-    "vee-validate": "^2.0.0-rc.2",
-    "vue": "^2.3.2",
-    "vue-template-compiler": "^2.3.2"
+    "vee-validate": "^2.0.0-rc.3",
+    "vue": "^2.3.3",
+    "vue-template-compiler": "^2.3.3"
   },
   "standard": {
     "globals": [
