fix: Chinese name

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -62,7 +62,7 @@ langs:
     name: English
   -
     id: zh
-    name: Chinese - 普通话
+    name: Chinese - 中文
   -
     id: fr
     name: French - Français
