fix: config env vars parsing

--- a/npm/configs/config.heroku.yml
+++ b/npm/configs/config.heroku.yml
@@ -103,7 +103,7 @@ sessionSecret: 1234567890abcdefghijklmnopqrstuvxyz
 # Database Connection String
 # ---------------------------------------------------------------------
 
-db: $(MONGO_URI)
+db: $(MONGODB_URI)
 
 # ---------------------------------------------------------------------
 # Git Connection Info
