--- a/npm/configs/config.heroku.yml
+++ b/npm/configs/config.heroku.yml
@@ -57,11 +57,11 @@ auth:
   local:
     enabled: true
   google:
-    enabled: true
+    enabled: false
     clientId: GOOGLE_CLIENT_ID
     clientSecret: GOOGLE_CLIENT_SECRET
   microsoft:
-    enabled: true
+    enabled: false
     clientId: MS_APP_ID
     clientSecret: MS_APP_SECRET
   facebook:
