--- a/config.sample.yml
+++ b/config.sample.yml
@@ -43,7 +43,7 @@ uploads:
 # ---------------------------------------------------------------------
 # Site Language
 # ---------------------------------------------------------------------
-# Possible values: en, de, es, fr, ko, pt or ru
+# Possible values: en, es, fr, ko, ru or zh
 
 lang: en
 
