--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "eslint.enable": true,
-"puglint.enable": true,
-"standard.enable": false
+  "puglint.enable": true,
+  "standard.enable": false,
+  "editor.formatOnSave": true
 }
