--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
     "validator": "^7.0.0",
     "validator-as-promised": "^1.0.2",
     "winston": "^2.3.1",
-    "yargs": "^8.0.1"
+    "yargs": "^8.0.1",
+    "requirejs": "^2.3.3"
   },
   "devDependencies": {
     "@glimpse/glimpse": "^0.20.9",
