refactor: Migrate to Vue components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,10 @@
 {
   "extends": "standard",
-
   "env": {
     "node": true,
     "es6": true,
     "jest": true
   },
-
   "globals": {
     "document": false,
     "navigator": false,
@@ -16,5 +14,8 @@
     "ROOTPATH": true,
     "SERVERPATH": true,
     "IS_DEBUG": true
+  },
+  "rules": {
+    "space-before-function-paren": 0
   }
 }
