--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "fs-extra": "^3.0.1",
     "git-wrapper2-promise": "^0.2.9",
     "highlight.js": "^9.11.0",
-    "i18next": "^8.2.0",
+    "i18next": "^8.3.0",
     "i18next-express-middleware": "^1.0.5",
     "i18next-node-fs-backend": "^1.0.0",
     "image-size": "^0.5.4",
@@ -78,7 +78,7 @@
     "markdown-it": "^8.3.1",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^4.0.0",
-    "markdown-it-attrs": "^0.8.0",
+    "markdown-it-attrs": "^0.9.0",
     "markdown-it-emoji": "^1.3.0",
     "markdown-it-expand-tabs": "^1.0.12",
     "markdown-it-external-links": "0.0.6",
@@ -126,11 +126,13 @@
   },
   "devDependencies": {
     "@glimpse/glimpse": "^0.20.9",
+    "@panter/vue-i18next": "^0.4.1",
     "babel-cli": "latest",
     "babel-jest": "latest",
     "babel-preset-es2015": "latest",
     "brace": "^0.10.0",
     "colors": "^1.1.2",
+    "consolidate": "^0.14.5",
     "eslint": "latest",
     "eslint-config-standard": "latest",
     "eslint-plugin-import": "latest",
@@ -138,6 +140,7 @@
     "eslint-plugin-promise": "latest",
     "eslint-plugin-standard": "latest",
     "fuse-box": "^2.0.0",
+    "i18next-xhr-backend": "^1.4.1",
     "jest": "latest",
     "jquery": "^3.2.1",
     "jquery-contextmenu": "^2.4.5",
@@ -155,7 +158,8 @@
     "vee-validate": "^2.0.0-rc.3",
     "vue": "^2.3.3",
     "vue-template-compiler": "^2.3.3",
-    "vue-template-es2015-compiler": "^1.5.2"
+    "vue-template-es2015-compiler": "^1.5.2",
+    "vuex": "^2.3.1"
   },
   "jest": {
     "collectCoverage": false,
