--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "i18next-express-middleware": "^1.0.5",
     "i18next-node-fs-backend": "^1.0.0",
     "image-size": "^0.5.4",
-    "jimp": "https://github.com/ngpixel/jimp.git",
+    "jimp": "^0.2.28",
     "js-yaml": "^3.8.4",
     "jsonwebtoken": "^7.4.1",
     "klaw": "^1.3.1",
@@ -157,6 +157,7 @@
     "uglify-js": "latest",
     "vee-validate": "^2.0.0-rc.3",
     "vue": "^2.3.3",
+    "vue-resource": "^1.3.1",
     "vue-template-compiler": "^2.3.3",
     "vue-template-es2015-compiler": "^1.5.2",
     "vuex": "^2.3.1"
