--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "follow-redirects": "1.2.3",
     "fs-extra": "^3.0.1",
     "git-wrapper2-promise": "^0.2.9",
+    "handsontable":"0.32.0-beta1",
     "highlight.js": "^9.11.0",
     "i18next": "^8.2.0",
     "i18next-express-middleware": "^1.0.5",
@@ -85,6 +86,7 @@
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-mathjax": "^2.0.0",
     "markdown-it-task-lists": "^2.0.1",
+    "markdown-table":"latest",
     "memdown": "^1.2.4",
     "mime-types": "^2.1.15",
     "moment": "^2.18.1",
