--- a/package.json
+++ b/package.json
@@ -89,8 +89,8 @@
     "mime-types": "^2.1.15",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
-    "mongodb": "^2.2.26",
-    "mongoose": "^4.10.0",
+    "mongodb": "^2.2.27",
+    "mongoose": "^4.10.1",
     "multer": "^1.3.0",
     "node-graceful": "^0.2.3",
     "ora": "^1.2.0",
@@ -126,7 +126,7 @@
   },
   "devDependencies": {
     "@glimpse/glimpse": "^0.20.9",
-    "@panter/vue-i18next": "^0.4.1",
+    "@panter/vue-i18next": "^0.5.0",
     "babel-cli": "latest",
     "babel-jest": "latest",
     "babel-preset-es2015": "latest",
@@ -147,6 +147,7 @@
     "jquery-simple-upload": "^1.0.0",
     "jquery-smooth-scroll": "^2.2.0",
     "jquery-sticky": "^1.0.4",
+    "lodash-es": "^4.17.4",
     "mathjax": "^2.7.1",
     "node-sass": "latest",
     "nodemon": "latest",
@@ -154,11 +155,11 @@
     "snyk": "latest",
     "twemoji-awesome": "^1.0.6",
     "typescript": "^2.3.2",
-    "uglify-js": "latest",
+    "uglify-es": "^3.0.10",
     "vee-validate": "^2.0.0-rc.3",
     "vue": "^2.3.3",
     "vue-clipboards": "^1.0.0",
-    "vue-resource": "^1.3.1",
+    "vue-resource": "^1.3.3",
     "vue-template-compiler": "^2.3.3",
     "vue-template-es2015-compiler": "^1.5.2",
     "vuex": "^2.3.1"
