refactor: vuex re-org + modal-create-page

--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
     "eslint-plugin-node": "latest",
     "eslint-plugin-promise": "latest",
     "eslint-plugin-standard": "latest",
-    "fuse-box": "^2.0.0",
+    "fuse-box": "2.1.0-beta.10",
     "i18next-xhr-backend": "^1.4.1",
     "jest": "latest",
     "jquery": "^3.2.1",
@@ -147,6 +147,7 @@
     "jquery-simple-upload": "^1.0.0",
     "jquery-smooth-scroll": "^2.2.0",
     "jquery-sticky": "^1.0.4",
+    "lodash-cli": "^4.17.4",
     "lodash-es": "^4.17.4",
     "mathjax": "^2.7.1",
     "node-sass": "latest",
@@ -159,6 +160,7 @@
     "vee-validate": "^2.0.0-rc.3",
     "vue": "^2.3.3",
     "vue-clipboards": "^1.0.0",
+    "vue-lodash": "^1.0.3",
     "vue-resource": "^1.3.3",
     "vue-template-compiler": "^2.3.3",
     "vue-template-es2015-compiler": "^1.5.2",
