chore: updated dependencies

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "bunyan": "^1.8.10",
-    "cheerio": "^0.22.0",
+    "cheerio": "^1.0.0-rc.1",
     "child-process-promise": "^2.2.1",
     "chokidar": "^1.7.0",
     "compression": "^1.6.2",
@@ -127,21 +127,21 @@
   "devDependencies": {
     "@glimpse/glimpse": "^0.20.9",
     "@panter/vue-i18next": "^0.5.0",
-    "babel-cli": "latest",
-    "babel-jest": "latest",
-    "babel-preset-es2015": "latest",
+    "babel-cli": "^6.24.1",
+    "babel-jest": "^20.0.3",
+    "babel-preset-es2015": "^6.24.1",
     "brace": "^0.10.0",
     "colors": "^1.1.2",
     "consolidate": "^0.14.5",
-    "eslint": "latest",
-    "eslint-config-standard": "latest",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-node": "latest",
-    "eslint-plugin-promise": "latest",
-    "eslint-plugin-standard": "latest",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "fuse-box": "2.1.0-beta.10",
     "i18next-xhr-backend": "^1.4.1",
-    "jest": "latest",
+    "jest": "^20.0.4",
     "jquery": "^3.2.1",
     "jquery-contextmenu": "^2.5.0",
     "jquery-simple-upload": "^1.0.0",
@@ -150,9 +150,9 @@
     "lodash-cli": "^4.17.4",
     "lodash-es": "^4.17.4",
     "mathjax": "^2.7.1",
-    "node-sass": "latest",
-    "nodemon": "latest",
-    "pug-lint": "latest",
+    "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
+    "pug-lint": "^2.4.0",
     "snyk": "latest",
     "twemoji-awesome": "^1.0.6",
     "typescript": "^2.3.3",
