--- a/package.json
+++ b/package.json
@@ -57,15 +57,15 @@
     "execa": "^0.6.3",
     "express": "^4.15.3",
     "express-brute": "1.0.1",
-    "express-brute-mongoose": "0.0.8",
+    "express-brute-mongoose": "^0.0.9",
     "express-session": "^1.15.3",
     "file-type": "^4.3.0",
     "filesize.js": "^1.0.2",
     "follow-redirects": "1.2.3",
     "fs-extra": "^3.0.1",
     "git-wrapper2-promise": "^0.2.9",
-    "highlight.js": "^9.11.0",
-    "i18next": "^8.3.0",
+    "highlight.js": "^9.12.0",
+    "i18next": "^8.4.0",
     "i18next-express-middleware": "^1.0.5",
     "i18next-node-fs-backend": "^1.0.0",
     "image-size": "^0.5.4",
@@ -73,7 +73,7 @@
     "js-yaml": "^3.8.4",
     "jsonwebtoken": "^7.4.1",
     "klaw": "^1.3.1",
-    "levelup": "^1.3.7",
+    "levelup": "^1.3.8",
     "lodash": "^4.17.4",
     "markdown-it": "^8.3.1",
     "markdown-it-abbr": "^1.0.4",
@@ -90,7 +90,7 @@
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
     "mongodb": "^2.2.27",
-    "mongoose": "^4.10.3",
+    "mongoose": "^4.10.4",
     "multer": "^1.3.0",
     "node-graceful": "^0.2.3",
     "ora": "^1.2.0",
@@ -109,12 +109,12 @@
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
     "request": "^2.81.0",
-    "search-index-adder": "https://github.com/ngpixel/search-index-adder.git",
-    "search-index-searcher": "https://github.com/ngpixel/search-index-searcher.git",
+    "search-index-adder": "^0.2.3",
+    "search-index-searcher": "^0.2.3",
     "semver": "^5.3.0",
     "serve-favicon": "^2.4.3",
     "simplemde": "^1.11.2",
-    "socket.io": "2.0.1",
+    "socket.io": "^2.0.2",
     "stopword": "^0.1.1",
     "stream-to-promise": "^2.2.0",
     "tar": "^3.1.3",
@@ -153,10 +153,10 @@
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "pug-lint": "^2.4.0",
-    "snyk": "latest",
+    "snyk": "^1.33.0",
     "twemoji-awesome": "^1.0.6",
-    "typescript": "^2.3.3",
-    "uglify-es": "^3.0.12",
+    "typescript": "^2.3.4",
+    "uglify-es": "^3.0.15",
     "vee-validate": "^2.0.0-rc.5",
     "vue": "^2.3.3",
     "vue-clipboards": "^1.0.0",
