--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "dependencies": {
     "auto-load": "^2.1.0",
-    "axios": "0.16.1",
+    "axios": "^0.16.2",
     "bcryptjs-then": "^1.0.1",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
@@ -89,7 +89,7 @@
     "mime-types": "^2.1.15",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
-    "mongodb": "^2.2.27",
+    "mongodb": "^2.2.28",
     "mongoose": "^4.10.4",
     "multer": "^1.3.0",
     "node-graceful": "^0.2.3",
@@ -105,7 +105,7 @@
     "passport-windowslive": "^1.0.2",
     "passport.socketio": "^3.7.0",
     "pm2": "2.4.6",
-    "pug": "^2.0.0-rc.1",
+    "pug": "^2.0.0-rc.2",
     "read-chunk": "^2.0.0",
     "remove-markdown": "^0.1.0",
     "request": "^2.81.0",
@@ -117,7 +117,7 @@
     "socket.io": "^2.0.2",
     "stopword": "^0.1.1",
     "stream-to-promise": "^2.2.0",
-    "tar": "^3.1.3",
+    "tar": "^3.1.5",
     "through2": "^2.0.3",
     "validator": "^7.0.0",
     "validator-as-promised": "^1.0.2",
@@ -136,7 +136,7 @@
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "fuse-box": "2.1.0-beta.10",
