--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "mongodb": "^2.2.28",
     "mongoose": "^4.10.5",
     "multer": "^1.3.0",
+    "node-2fa": "^1.1.2",
     "node-graceful": "^0.2.3",
     "ora": "^1.2.0",
     "passport": "^0.3.2",
