refactor: Pre-render TeX + MathML server-side to SVG

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-mathjax": "^2.0.0",
     "markdown-it-task-lists": "^2.0.1",
+    "mathjax-node": "^1.1.0",
     "memdown": "^1.2.4",
     "mime-types": "^2.1.15",
     "moment": "^2.18.1",
@@ -100,7 +101,7 @@
     "passport-facebook": "^2.1.1",
     "passport-github2": "^0.1.10",
     "passport-google-oauth20": "^1.0.0",
-    "passport-ldapauth": "^1.0.0",
+    "passport-ldapauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-slack": "0.0.7",
     "passport-windowslive": "^1.0.2",
@@ -134,9 +135,9 @@
     "brace": "^0.10.0",
     "colors": "^1.1.2",
     "consolidate": "^0.14.5",
-    "eslint": "^3.19.0",
+    "eslint": "^4.0.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
@@ -154,12 +155,12 @@
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "pug-lint": "^2.4.0",
-    "snyk": "^1.34.3",
+    "snyk": "^1.36.0",
     "twemoji-awesome": "^1.0.6",
     "typescript": "^2.3.4",
-    "uglify-es": "^3.0.15",
-    "uglify-js": "^3.0.15",
-    "vee-validate": "^2.0.0-rc.5",
+    "uglify-es": "^3.0.19",
+    "uglify-js": "^3.0.19",
+    "vee-validate": "^2.0.0-rc.6",
     "vue": "^2.3.4",
     "vue-clipboards": "^1.0.2",
     "vue-lodash": "^1.0.3",
