feat: Optional linebreaks + mathjax processing

--- a/npm/configs/config.heroku.yml
+++ b/npm/configs/config.heroku.yml
@@ -133,6 +133,15 @@ git:
   showUserEmail: $(WIKI_SHOW_USER_EMAIL)
 
 # ---------------------------------------------------------------------
+# Features
+# ---------------------------------------------------------------------
+# You can enable / disable specific features below
+
+features:
+  linebreaks: true
+  mathjax: true
+
+# ---------------------------------------------------------------------
 # External Logging
 # ---------------------------------------------------------------------
 
