--- a/config.sample.yml
+++ b/config.sample.yml
@@ -135,6 +135,15 @@ git:
   showUserEmail: true
 
 # ---------------------------------------------------------------------
+# Features
+# ---------------------------------------------------------------------
+# You can enable / disable specific features below
+
+features:
+  linebreaks: true
+  mathjax: true
+
+# ---------------------------------------------------------------------
 # External Logging
 # ---------------------------------------------------------------------
 
