--- a/npm/configs/config.docker.yml
+++ b/npm/configs/config.docker.yml
@@ -133,6 +133,15 @@ git:
   showUserEmail: true
 
 # ---------------------------------------------------------------------
+# Features
+# ---------------------------------------------------------------------
+# You can enable / disable specific features below
+
+features:
+  linebreaks: true
+  mathjax: true
+
+# ---------------------------------------------------------------------
 # External Logging
 # ---------------------------------------------------------------------
 
