--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wiki",
-  "version": "1.0.0-beta.12",
+  "version": "1.0.0-beta.13",
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "server.js",
   "scripts": {
@@ -39,135 +39,135 @@
     "node": ">=4.6"
   },
   "dependencies": {
-    "auto-load": "^2.1.0",
-    "axios": "^0.16.2",
-    "bcryptjs-then": "^1.0.1",
-    "bluebird": "^3.5.0",
-    "body-parser": "^1.17.2",
-    "bunyan": "^1.8.10",
-    "cheerio": "^1.0.0-rc.1",
-    "child-process-promise": "^2.2.1",
-    "chokidar": "^1.7.0",
-    "compression": "^1.6.2",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^1.3.2",
-    "cookie-parser": "^1.4.3",
-    "cron": "^1.2.1",
-    "diff2html": "^2.3.0",
-    "execa": "^0.7.0",
-    "express": "^4.15.3",
+    "auto-load": "~2.1.0",
+    "axios": "~0.16.2",
+    "bcryptjs-then": "~1.0.1",
+    "bluebird": "~3.5.0",
+    "body-parser": "~1.17.2",
+    "bunyan": "~1.8.10",
+    "cheerio": "~1.0.0-rc.1",
+    "child-process-promise": "~2.2.1",
+    "chokidar": "~1.7.0",
+    "compression": "~1.6.2",
+    "connect-flash": "~0.1.1",
+    "connect-mongo": "~1.3.2",
+    "cookie-parser": "~1.4.3",
+    "cron": "~1.2.1",
+    "diff2html": "~2.3.0",
+    "execa": "~0.7.0",
+    "express": "~4.15.3",
     "express-brute": "1.0.1",
-    "express-brute-mongoose": "^0.0.9",
-    "express-session": "^1.15.3",
-    "file-type": "^5.1.1",
-    "filesize.js": "^1.0.2",
-    "follow-redirects": "1.2.3",
-    "fs-extra": "^3.0.1",
-    "git-wrapper2-promise": "^0.2.9",
-    "highlight.js": "^9.12.0",
-    "i18next": "^8.4.1",
-    "i18next-express-middleware": "^1.0.5",
-    "i18next-node-fs-backend": "^1.0.0",
-    "image-size": "^0.5.4",
-    "jimp": "^0.2.28",
-    "js-yaml": "^3.8.4",
-    "jsonwebtoken": "^7.4.1",
-    "klaw": "^1.3.1",
-    "levelup": "^1.3.8",
-    "lodash": "^4.17.4",
-    "markdown-it": "^8.3.1",
-    "markdown-it-abbr": "^1.0.4",
-    "markdown-it-anchor": "^4.0.0",
-    "markdown-it-attrs": "^0.9.0",
-    "markdown-it-emoji": "^1.3.0",
-    "markdown-it-expand-tabs": "^1.0.12",
+    "express-brute-mongoose": "~0.0.9",
+    "express-session": "~1.15.3",
+    "file-type": "~5.1.1",
+    "filesize.js": "~1.0.2",
+    "follow-redirects": "~1.2.4",
+    "fs-extra": "~3.0.1",
+    "git-wrapper2-promise": "~0.2.9",
+    "highlight.js": "~9.12.0",
+    "i18next": "~8.4.1",
+    "i18next-express-middleware": "~1.0.5",
+    "i18next-node-fs-backend": "~1.0.0",
+    "image-size": "~0.6.0",
+    "jimp": "~0.2.28",
+    "js-yaml": "~3.8.4",
+    "jsonwebtoken": "~7.4.1",
+    "klaw": "~2.0.0",
+    "levelup": "~1.3.8",
+    "lodash": "~4.17.4",
+    "markdown-it": "~8.3.1",
+    "markdown-it-abbr": "~1.0.4",
+    "markdown-it-anchor": "~4.0.0",
+    "markdown-it-attrs": "~0.9.0",
+    "markdown-it-emoji": "~1.4.0",
+    "markdown-it-expand-tabs": "~1.0.12",
     "markdown-it-external-links": "0.0.6",
-    "markdown-it-footnote": "^3.0.1",
-    "markdown-it-mathjax": "^2.0.0",
-    "markdown-it-task-lists": "^2.0.1",
-    "mathjax-node": "^1.1.0",
-    "memdown": "^1.2.4",
-    "mime-types": "^2.1.15",
-    "moment": "^2.18.1",
-    "moment-timezone": "^0.5.13",
-    "mongodb": "^2.2.28",
-    "mongoose": "^4.10.5",
-    "multer": "^1.3.0",
-    "node-2fa": "^1.1.2",
-    "node-graceful": "^0.2.3",
-    "ora": "^1.2.0",
-    "passport": "^0.3.2",
+    "markdown-it-footnote": "~3.0.1",
+    "markdown-it-mathjax": "~2.0.0",
+    "markdown-it-task-lists": "~2.0.1",
+    "mathjax-node": "~1.1.0",
+    "memdown": "~1.2.4",
+    "mime-types": "~2.1.15",
+    "moment": "~2.18.1",
+    "moment-timezone": "~0.5.13",
+    "mongodb": "~2.2.29",
+    "mongoose": "4.10.8",
+    "multer": "~1.3.0",
+    "node-2fa": "~1.1.2",
+    "node-graceful": "~0.2.3",
+    "ora": "~1.2.0",
+    "passport": "~0.3.2",
     "passport-azure-ad-oauth2": "0.0.4",
-    "passport-facebook": "^2.1.1",
-    "passport-github2": "^0.1.10",
-    "passport-google-oauth20": "^1.0.0",
-    "passport-ldapauth": "^2.0.0",
-    "passport-local": "^1.0.0",
+    "passport-facebook": "~2.1.1",
+    "passport-github2": "~0.1.10",
+    "passport-google-oauth20": "~1.0.0",
+    "passport-ldapauth": "~2.0.0",
+    "passport-local": "~1.0.0",
     "passport-slack": "0.0.7",
-    "passport-windowslive": "^1.0.2",
-    "passport.socketio": "^3.7.0",
-    "pm2": "^2.5.0",
-    "pug": "^2.0.0-rc.2",
-    "read-chunk": "^2.0.0",
-    "remove-markdown": "^0.1.0",
-    "request": "^2.81.0",
-    "search-index-adder": "^0.2.4",
-    "search-index-searcher": "^0.2.3",
-    "semver": "^5.3.0",
-    "serve-favicon": "^2.4.3",
-    "simplemde": "^1.11.2",
-    "socket.io": "^2.0.2",
-    "stopword": "^0.1.1",
-    "stream-to-promise": "^2.2.0",
-    "tar": "^3.1.5",
-    "through2": "^2.0.3",
-    "validator": "^7.0.0",
-    "validator-as-promised": "^1.0.2",
-    "winston": "^2.3.1",
-    "yargs": "^8.0.1"
+    "passport-windowslive": "~1.0.2",
+    "passport.socketio": "~3.7.0",
+    "pm2": "~2.5.0",
+    "pug": "~2.0.0-rc.2",
+    "read-chunk": "~2.0.0",
+    "remove-markdown": "~0.2.0",
+    "request": "~2.81.0",
+    "search-index-adder": "~0.3.5",
+    "search-index-searcher": "~0.2.5",
+    "semver": "~5.3.0",
+    "serve-favicon": "~2.4.3",
+    "simplemde": "~1.11.2",
+    "socket.io": "~2.0.2",
+    "stopword": "~0.1.6",
+    "stream-to-promise": "~2.2.0",
+    "tar": "~3.1.5",
+    "through2": "~2.0.3",
+    "validator": "~7.2.0",
+    "validator-as-promised": "~1.0.2",
+    "winston": "~2.3.1",
+    "yargs": "~8.0.1"
   },
   "devDependencies": {
-    "@glimpse/glimpse": "^0.21.5",
-    "@panter/vue-i18next": "^0.5.0",
-    "babel-cli": "^6.24.1",
-    "babel-jest": "^20.0.3",
-    "babel-preset-es2015": "^6.24.1",
-    "brace": "^0.10.0",
-    "colors": "^1.1.2",
-    "consolidate": "^0.14.5",
-    "eslint": "^4.0.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-node": "^5.0.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "fuse-box": "^2.1.0",
-    "i18next-xhr-backend": "^1.4.2",
-    "jest": "^20.0.4",
-    "jquery": "^3.2.1",
-    "jquery-contextmenu": "^2.5.0",
-    "jquery-simple-upload": "^1.0.0",
-    "jquery-smooth-scroll": "^2.2.0",
-    "jquery-sticky": "^1.0.4",
-    "lodash-cli": "^4.17.4",
-    "lodash-es": "^4.17.4",
-    "mathjax": "^2.7.1",
-    "node-sass": "^4.5.3",
-    "nodemon": "^1.11.0",
-    "pug-lint": "^2.4.0",
-    "snyk": "^1.36.0",
-    "twemoji-awesome": "^1.0.6",
-    "typescript": "^2.3.4",
-    "uglify-es": "^3.0.19",
-    "uglify-js": "^3.0.19",
-    "vee-validate": "^2.0.0-rc.6",
-    "vue": "^2.3.4",
-    "vue-clipboards": "^1.0.2",
-    "vue-lodash": "^1.0.3",
-    "vue-resource": "^1.3.4",
-    "vue-template-compiler": "^2.3.4",
-    "vue-template-es2015-compiler": "^1.5.2",
-    "vuex": "^2.3.1"
+    "@glimpse/glimpse": "~0.21.5",
+    "@panter/vue-i18next": "~0.5.0",
+    "babel-cli": "~6.24.1",
+    "babel-jest": "~20.0.3",
+    "babel-preset-es2015": "~6.24.1",
+    "brace": "~0.10.0",
+    "colors": "~1.1.2",
+    "consolidate": "~0.14.5",
+    "eslint": "~4.1.1",
+    "eslint-config-standard": "~10.2.1",
+    "eslint-plugin-import": "~2.6.1",
+    "eslint-plugin-node": "~5.1.0",
+    "eslint-plugin-promise": "~3.5.0",
+    "eslint-plugin-standard": "~3.0.1",
+    "fuse-box": "~2.1.0",
+    "i18next-xhr-backend": "~1.4.2",
+    "jest": "~20.0.4",
+    "jquery": "~3.2.1",
+    "jquery-contextmenu": "~2.5.0",
+    "jquery-simple-upload": "~1.0.0",
+    "jquery-smooth-scroll": "~2.2.0",
+    "jquery-sticky": "~1.0.4",
+    "lodash-cli": "~4.17.4",
+    "lodash-es": "~4.17.4",
+    "mathjax": "~2.7.1",
+    "node-sass": "~4.5.3",
+    "nodemon": "~1.11.0",
+    "pug-lint": "~2.4.0",
+    "snyk": "~1.36.2",
+    "twemoji-awesome": "~1.0.6",
+    "typescript": "~2.4.1",
+    "uglify-es": "~3.0.22",
+    "uglify-js": "~3.0.22",
+    "vee-validate": "~2.0.0-rc.6",
+    "vue": "~2.3.4",
+    "vue-clipboards": "~1.0.2",
+    "vue-lodash": "~1.0.3",
+    "vue-resource": "~1.3.4",
+    "vue-template-compiler": "~2.3.4",
+    "vue-template-es2015-compiler": "~1.5.3",
+    "vuex": "~2.3.1"
   },
   "jest": {
     "collectCoverage": false,
