--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "express-brute": "1.0.1",
     "express-brute-mongoose": "~0.0.9",
     "express-session": "~1.15.3",
-    "file-type": "~5.1.1",
+    "file-type": "^5.2.0",
     "filesize.js": "~1.0.2",
     "follow-redirects": "~1.2.4",
     "fs-extra": "~3.0.1",
@@ -95,7 +95,7 @@
     "multer": "~1.3.0",
     "node-2fa": "~1.1.2",
     "node-graceful": "~0.2.3",
-    "ora": "~1.2.0",
+    "ora": "^1.3.0",
     "passport": "~0.3.2",
     "passport-azure-ad-oauth2": "0.0.4",
     "passport-facebook": "~2.1.1",
