feat: Color Theme live preview

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -64,6 +64,26 @@ defaults:
       code:
         dark: true
         colorize: true
+colors:
+  - red
+  - pink
+  - purple
+  - deep-purple
+  - indigo
+  - blue
+  - light-blue
+  - cyan
+  - teal
+  - green
+  - light-green
+  - lime
+  - yellow
+  - amber
+  - orange
+  - deep-orange
+  - brown
+  - grey
+  - blue-grey
 langs:
   -
     id: en
