docs: Updated changelog

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -95,6 +95,9 @@ langs:
     id: fr
     name: French - Français
   -
+    id: de
+    name: German - Deutsch
+  -
     id: ko
     name: Korean - 한국어
   -
