--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "build": "node fuse",
     "dev": "node fuse -d",
     "dev-configure": "node fuse -c",
-    "test": "jest",
-    "snyk-protect": "snyk protect",
-    "__prepublish": "npm run snyk-protect"
+    "test": "jest"
   },
   "bin": {
     "wiki": "wiki.js"
@@ -59,7 +57,7 @@
     "express-brute": "1.0.1",
     "express-brute-mongoose": "~0.0.9",
     "express-session": "~1.15.3",
-    "file-type": "^5.2.0",
+    "file-type": "~5.2.0",
     "filesize.js": "~1.0.2",
     "follow-redirects": "~1.2.4",
     "fs-extra": "~3.0.1",
@@ -95,7 +93,7 @@
     "multer": "~1.3.0",
     "node-2fa": "~1.1.2",
     "node-graceful": "~0.2.3",
-    "ora": "^1.3.0",
+    "ora": "~1.3.0",
     "passport": "~0.3.2",
     "passport-azure-ad-oauth2": "0.0.4",
     "passport-facebook": "~2.1.1",
@@ -155,7 +153,6 @@
     "node-sass": "~4.5.3",
     "nodemon": "~1.11.0",
     "pug-lint": "~2.4.0",
-    "snyk": "~1.36.2",
     "twemoji-awesome": "~1.0.6",
     "typescript": "~2.4.1",
     "uglify-es": "~3.0.24",
@@ -176,6 +173,5 @@
       "**/?(*.)(spec|test).js?(x)"
     ],
     "verbose": true
-  },
-  "snyk": true
+  }
 }
