--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "moment": "~2.18.1",
     "moment-timezone": "~0.5.13",
     "mongodb": "~2.2.30",
-    "mongoose": "4.10.8",
+    "mongoose": "^4.11.1",
     "multer": "~1.3.0",
     "node-2fa": "~1.1.2",
     "node-graceful": "~0.2.3",
