refactor: use yarn during npm install process

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,8 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5"
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
