--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wiki",
   "version": "1.0.0-beta.14",
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
-  "main": "server.js",
+  "main": "wiki.js",
   "scripts": {
     "start": "node wiki start",
     "stop": "node wiki stop",
