--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "moment": "~2.18.1",
     "moment-timezone": "~0.5.13",
     "mongodb": "~2.2.30",
-    "mongoose": "^4.11.1",
+    "mongoose": "~4.11.1",
     "multer": "~1.3.0",
     "node-2fa": "~1.1.2",
     "node-graceful": "~0.2.3",
@@ -110,7 +110,7 @@
     "remove-markdown": "~0.2.0",
     "request": "~2.81.0",
     "search-index-adder": "~0.3.9",
-    "search-index-searcher": "~0.2.8",
+    "search-index-searcher": "~0.2.10",
     "semver": "~5.3.0",
     "serve-favicon": "~2.4.3",
     "simplemde": "~1.11.2",
@@ -133,13 +133,13 @@
     "brace": "~0.10.0",
     "colors": "~1.1.2",
     "consolidate": "~0.14.5",
-    "eslint": "~4.2.0",
+    "eslint": "~4.3.0",
     "eslint-config-standard": "~10.2.1",
     "eslint-plugin-import": "~2.7.0",
     "eslint-plugin-node": "~5.1.0",
     "eslint-plugin-promise": "~3.5.0",
     "eslint-plugin-standard": "~3.0.1",
-    "fuse-box": "~2.2.0",
+    "fuse-box": "~2.2.1",
     "i18next-xhr-backend": "~1.4.2",
     "jest": "~20.0.4",
     "jquery": "~3.2.1",
@@ -156,11 +156,11 @@
     "typescript": "~2.4.1",
     "uglify-es": "~3.0.24",
     "vee-validate": "~2.0.0-rc.6",
-    "vue": "~2.4.1",
+    "vue": "~2.4.2",
     "vue-clipboards": "~1.0.2",
     "vue-lodash": "~1.0.3",
     "vue-resource": "~1.3.4",
-    "vue-template-compiler": "~2.4.1",
+    "vue-template-compiler": "~2.4.2",
     "vue-template-es2015-compiler": "~1.5.3",
     "vuex": "~2.3.1"
   },
