refactor: migrate to PostgreSQL + Sequelize

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -64,6 +64,15 @@ defaults:
       code:
         dark: true
         colorize: true
+authProviders:
+  - local
+  - microsoft
+  - google
+  - facebook
+  - github
+  - slack
+  - ldap
+  - azure
 colors:
   - red
   - pink
