--- a/package.json
+++ b/package.json
@@ -48,14 +48,14 @@
     "chokidar": "~1.7.0",
     "compression": "~1.7.0",
     "connect-flash": "~0.1.1",
-    "connect-mongo": "~1.3.2",
+    "connect-redis": "~3.3.0",
     "cookie-parser": "~1.4.3",
     "cron": "~1.2.1",
     "diff2html": "~2.3.0",
     "execa": "~0.7.0",
     "express": "~4.15.3",
     "express-brute": "1.0.1",
-    "express-brute-mongoose": "~0.0.9",
+    "express-brute-redis": "~0.0.1",
     "express-session": "~1.15.3",
     "file-type": "~5.2.0",
     "filesize.js": "~1.0.2",
@@ -67,6 +67,7 @@
     "i18next-express-middleware": "~1.0.5",
     "i18next-node-fs-backend": "~1.0.0",
     "image-size": "~0.6.0",
+    "ioredis": "~3.1.1",
     "jimp": "~0.2.28",
     "js-yaml": "~3.9.0",
     "jsonwebtoken": "~7.4.1",
@@ -88,8 +89,6 @@
     "mime-types": "~2.1.15",
     "moment": "~2.18.1",
     "moment-timezone": "~0.5.13",
-    "mongodb": "~2.2.30",
-    "mongoose": "~4.11.1",
     "multer": "~1.3.0",
     "node-2fa": "~1.1.2",
     "node-graceful": "~0.2.3",
@@ -104,6 +103,9 @@
     "passport-slack": "0.0.7",
     "passport-windowslive": "~1.0.2",
     "passport.socketio": "~3.7.0",
+    "pg": "~7.0.2",
+    "pg-hstore": "~2.3.2",
+    "pg-promise": "~6.3.5",
     "pm2": "~2.6.1",
     "pug": "~2.0.0-rc.2",
     "read-chunk": "~2.0.0",
@@ -112,6 +114,7 @@
     "search-index-adder": "~0.3.9",
     "search-index-searcher": "~0.2.10",
     "semver": "~5.3.0",
+    "sequelize": "~4.4.2",
     "serve-favicon": "~2.4.3",
     "simplemde": "~1.11.2",
     "socket.io": "~2.0.2",
